Változtattam a gitweblap.html fájlban

--- a/IKT Projektmunka/gitweblap.html
+++ b/IKT Projektmunka/gitweblap.html
@@ -23,5 +23,25 @@
     </li> 
   </ul>
 </nav>
+
+<div class="container-fluid">
+  <h2 class="display-5" id="udvozlo-oldal">Üdvözlet az oldalon!</h2>
+  <div class="row">    
+    <div class="col-lg-8 col-xl-9">      
+      <p>Ezen az oldalon különböző hálózat tananyagokhoz található leírásokat találhatsz.</p>
+      <p>A tanulni való anyagok: </p>
+      <li>
+        OSI modell
+      </li>
+      <li>
+        DHCP (Dynamic Host Configuration Protocol)
+      </li>
+    </div>
+    <div class="col-lg-4 col-xl-3">
+      <img src="kepek/OSI-Model.png" class="kiskep" alt="OSI modell" title="OSI modell">
+      <img src="kepek/DHCP.jpg" class="kiskep" alt="DHCP" title="DHCP">
+    </div>
+  </div>
+  
 </body>
 </html>
