Módosítottam a gitweblap.html állományt

--- a/IKT Projektmunka/gitweblap.html
+++ b/IKT Projektmunka/gitweblap.html
@@ -43,5 +43,36 @@
     </div>
   </div>
   
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <h2 class="display-5" id="tagok">Tagok akik dolgoztak az oldalon</h2>
+  <div class="row">
+    <div class="col-lg-8 col-xl-9">
+      <h3>Balázs Bence</h3>
+      <p><a href="gitweblap-bence bemutat.html">Bemutatkozó oldal</a></p>
+      <p>Üdvözlő oldal (Ez az oldal)</p>
+      <h3>Buzás Bálint</h3>
+      <p><a href="">Bemutatkozó oldal</a></p>
+      <p><a href="">DHCP tananyag</a></p>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+    </div>
+    <div class="col-lg-4 col-xl-3">
+      <img src="kepek/rendszergazda.jpg" class="kiskep" alt="rendgazd" title="rendgazd">
+    </div> 
+  </div>
 </body>
 </html>
