Kiskutya_kep hozzáadása a git_weblap.html-hez

--- a/IKT Projektmunka/git_weblap.html
+++ b/IKT Projektmunka/git_weblap.html
@@ -32,7 +32,8 @@
     Kedvenc sport: A kedvenc sportom a labdarúgás. A helyi foci csapatnak vagyok igazolt játékosa.
   </li>
 </ul>
-
+<p>A kiskutyánkról egy kép:</p>
+<img src="kepek/Kiskutya_kep.jpg" title="Kiskutya" alt="Kiskutya">
 
 </body>
 </html>
