Befejeztem a bemutatkozó oldalt(git_weblap.html)

--- a/IKT Projektmunka/git_weblap.html
+++ b/IKT Projektmunka/git_weblap.html
@@ -21,6 +21,8 @@
   </ul>
 </nav>
 
+<h2>Buzás Bálint bemutatkozó oldala</h2>
+
 <ul>
   <li>
     Név:Buzás Bálint
@@ -33,7 +35,8 @@
   </li>
 </ul>
 <p>A kiskutyánkról egy kép:</p>
-<img src="kepek/Kiskutya_kep.jpg" title="Kiskutya" alt="Kiskutya">
+<img src="kepek/Kiskutya_kep.jpg" title="Kiskutya" alt="Kiskutya" width="200px">
 
+<footer><a href="gitweblap.html">Vissza az Üdvözlő oldalra</a></footer>
 </body>
 </html>
