Hozzáadtam egy a nevet, a hobby-t és a kedvenc sport-ot a gitweblap-bence bemutat.html állományhoz

--- a/IKT Projektmunka/gitweblap-bence bemutat.html
+++ b/IKT Projektmunka/gitweblap-bence bemutat.html
@@ -20,5 +20,21 @@
     </li>
   </ul>
 </nav>
+<div class="container-fluid">
+  <h2 class="display-5" id="bemutatkozas">Balázs Bence bemutatkozása</h2>
+  <div class="row">    
+    <div class="col-lg-8 col-xl-9">      
+      <li>
+        Név: Balázs Bence Dénes
+      </li>
+      <li>
+        Hobby: Számítógépes videójátékok
+      </li>
+      <li>
+        Kedvenc sport: Nincs
+      </li>
+    </div>
+  </div>   
+</div>
 </body>
 </html>
