Hozzáadtam egy a nevet, a hobby-t és a kedvenc sport-ot a gitweblap-bence bemutat.html állományhoz

--- a/IKT Projektmunka/gitweblap.html
+++ b/IKT Projektmunka/gitweblap.html
@@ -56,8 +56,8 @@
       <p><a href="gitweblap-bence bemutat.html">Bemutatkozó oldal</a></p>
       <p>Üdvözlő oldal (Ez az oldal)</p>
       <h3>Buzás Bálint</h3>
-      <p><a href="">Bemutatkozó oldal</a></p>
-      <p><a href="">DHCP tananyag</a></p>
+      <p><a href="git_weblap.html">Bemutatkozó oldal</a></p>
+      <p><a href="DHCP_oldal.html">DHCP tananyag</a></p>
       <br>
       <br>
       <br>
