--- a/IKT Projektmunka/gitweblap-bence bemutat.html
+++ b/IKT Projektmunka/gitweblap-bence bemutat.html
@@ -16,12 +16,13 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#bemutatkozas"></a>
+      <a class="nav-link" href="#udvozlo-oldal"></a>
     </li>
   </ul>
 </nav>
+
 <div class="container-fluid">
-  <h2 class="display-5" id="bemutatkozas">Balázs Bence bemutatkozása</h2>
+  <h2 class="display-5" id="udvozlo-oldal">Balázs Bence bemutatkozása</h2>
   <div class="row">    
     <div class="col-lg-8 col-xl-9">      
       <li>
@@ -33,6 +34,13 @@
       <li>
         Kedvenc sport: Nincs
       </li>
+      <li>
+        Kedvenc állat: macska
+      </li>
+      <img src="kepek/cica.jpg" alt="CÍCAA" title="CÍCAA">
+      <p>CÍCAA</p>
+      <br>
+      <footer><a href="gitweblap.html">Vissza az Üdvözlő oldalra</a></footer>
     </div>
   </div>   
 </div>
