A DHCP_oldal.html-oldalban lévő szöveg hozzáadása és a képek kereteinek elkészítése.

--- a/IKT Projektmunka/DHCP_oldal.html
+++ b/IKT Projektmunka/DHCP_oldal.html
@@ -23,11 +23,22 @@
   </ul>
 </nav>
 
+<p>A dinamikus állomáskonfiguráló protokoll (angolul Dynamic Host Configuration Protocol, rövidítve DHCP) egy számítógépes hálózati kommunikációs protokoll. Az IETF RFC 1541, majd később a 2131 határozza meg.</p>
+
+<h2>Mi az a DHCP és hogyan működik?</h2>
+
+<p>A DHCP egy fedél alatti mechanizmus, amely automatizálja az IP-címek hozzárendelését a vezetékes vagy vezeték nélküli fix és mobil gazdagépekhez.</p>
+
 <div class="container-fluid">
   <h2 class="display-5" id="DHCP">DHCP</h2>
   <div class="row">    
     <div class="col-lg-8 col-xl-9">      
-   
+    </div>
+    <div class="col-lg-4 col-xl-3">
+      <img src="kepek/" class="kiskep" alt="" title="">
+      <img src="kepek/" class="kiskep" alt="" title="">
+    </div>
+  </div>
     </div>
   
   </div>
