A DHCP_oldal.html-hez hozzáadtam a képet és a linket is beszúrtam.

--- a/IKT Projektmunka/DHCP_oldal.html
+++ b/IKT Projektmunka/DHCP_oldal.html
@@ -33,17 +33,14 @@
   <h2 class="display-5" id="DHCP">DHCP</h2>
   <div class="row">    
     <div class="col-lg-8 col-xl-9">      
-    </div>
-    <div class="col-lg-4 col-xl-3">
-      <img src="kepek/" class="kiskep" alt="" title="">
-      <img src="kepek/" class="kiskep" alt="" title="">
+        <div>
+          <div class="col-lg-4 col-xl-3">
+            <img src="kepek/DHCP_kep.jpg" class="kiskep" alt="DHCP" title="DHCP">
+          </div>
+        </div>
     </div>
   </div>
-    </div>
-  
-  </div>
-  
-
 </div>
+<footer><a href="gitweblap.html">Vissza az Üdvözlő oldalra</a></footer>
 </body>
 </html>
