A git_weblap kép aláírás kijavítása.

--- a/IKT Projektmunka/git_weblap.html
+++ b/IKT Projektmunka/git_weblap.html
@@ -36,6 +36,7 @@
 </ul>
 <p>A kiskutyánkról egy kép:</p>
 <img src="kepek/Kiskutya_kep.jpg" title="Kiskutya" alt="Kiskutya" width="200px">
+<p>Egy éves kiskutya akit Gusztikának hívnak.</p>
 
 <footer><a href="gitweblap.html">Vissza az Üdvözlő oldalra</a></footer>
 </body>
