--- a/IKT Projektmunka/DHCP_oldal.html
+++ b/IKT Projektmunka/DHCP_oldal.html
@@ -29,6 +29,29 @@
 
 <p>A DHCP egy fedél alatti mechanizmus, amely automatizálja az IP-címek hozzárendelését a vezetékes vagy vezeték nélküli fix és mobil gazdagépekhez.</p>
 
+<p>Amikor egy eszköz hozzá akar férni egy DHCP-t használó hálózathoz, kérést küld egy DHCP-kiszolgáló által felvett IP-címre. A szerver válaszként IP-címet küld az eszköznek, majd figyeli a cím használatát, és egy meghatározott idő elteltével vagy az eszköz leállása után visszaveszi.</p>
+
+<h2>A DHCP előnyei</h2>
+<ol>
+  <li>
+    Megbízható IP-cím konfiguráció
+  </li>
+  <li>
+    Csökkentett hálózati adminisztráció
+  </li>
+  <li>
+    Mobilitás
+  </li>
+  <li>
+    IP cím optimalizálás
+  </li>
+  <li>
+    Hatékony változáskezelés
+  </li>
+</ol>
+
+<p></p>
+
 <div class="container-fluid">
   <h2 class="display-5" id="DHCP">DHCP</h2>
   <div class="row">    
@@ -42,5 +65,6 @@
   </div>
 </div>
 <footer><a href="gitweblap.html">Vissza az Üdvözlő oldalra</a></footer>
+<a href="https://bytech.hu/dhcp/">Forrás</a>
 </body>
 </html>
